--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "private": true,
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@nrwl/cypress": "15.4.4",
     "@nrwl/eslint-plugin-nx": "15.4.4",
-    "@nrwl/jest": "15.4.4",
+    "@nrwl/jest": "15.4.5",
     "@nrwl/linter": "15.4.4",
+    "@nrwl/nest": "15.4.5",
+    "@nrwl/node": "15.4.5",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.4.4",
     "@nrwl/web": "15.4.4",
@@ -18,7 +22,7 @@
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -44,10 +48,15 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   }
 }
