--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/htmlparser2": "^3.10.3",
     "core-js": "^3.6.5",
+    "htmlparser2": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
