--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/node": "18.7.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
@@ -51,6 +53,8 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/websockets": "^9.2.1",
     "@types/htmlparser2": "^3.10.3",
     "core-js": "^3.6.5",
     "htmlparser2": "^8.0.1",
@@ -59,6 +63,8 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0"
   }
 }
