--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
+    "@types/node-fetch": "^2.6.2",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/socket.io": "^3.0.2",
