--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/swagger": "^6.1.4",
     "@nestjs/websockets": "^9.2.1",
     "@types/htmlparser2": "^3.10.3",
     "core-js": "^3.6.5",
