--- a/package.json
+++ b/package.json
@@ -65,11 +65,14 @@
     "htmlparser2": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-window": "^1.8.8",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "wp-types": "^3.61.0"
   }
 }
