--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "10.4.13",
     "babel-jest": "28.1.1",
     "cypress": "^11.0.0",
     "eslint": "~8.15.0",
@@ -42,9 +43,11 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.4.4",
+    "postcss": "8.4.19",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
@@ -62,11 +65,14 @@
     "htmlparser2": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-window": "^1.8.8",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "wp-types": "^3.61.0"
   }
 }
