--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "htmlparser2": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
     "reflect-metadata": "^0.1.13",
