--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "karl",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "license": "MIT",
   "scripts": {},
   "private": true,
@@ -8,16 +8,16 @@
     "@babel/preset-react": "^7.14.5",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cypress": "15.4.4",
-    "@nrwl/eslint-plugin-nx": "15.4.4",
+    "@nrwl/cypress": "15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.4.5",
     "@nrwl/jest": "15.4.5",
     "@nrwl/linter": "15.4.5",
     "@nrwl/nest": "15.4.5",
     "@nrwl/node": "15.4.5",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "15.4.4",
-    "@nrwl/web": "15.4.4",
-    "@nrwl/workspace": "15.4.4",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "15.4.5",
+    "@nrwl/web": "15.4.5",
+    "@nrwl/workspace": "15.4.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "13.4.0",
@@ -42,7 +42,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "15.4.4",
+    "nx": "15.4.5",
     "postcss": "8.4.19",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
@@ -77,3 +77,4 @@
     "wp-types": "^3.61.0"
   }
 }
+
